--- a/src/components/App/index.less
+++ b/src/components/App/index.less
@@ -1,10 +1,11 @@
 @import './font.less';
 
-* {
+body, html {
   padding: 0;
   margin: 0;
   font-family: Samim;
   border: 0;
+  height: 100%;
 }
 
 body {
