--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   min-height: 100%;
-  background-image: url('@@URL@@/static/images/landbackground.png');
+  background-image: url('@@CDN@@/images/landbackground.png');
   display: flex;
   justify-content: center;
   align-items: center;
