fix: fix UI bugs

--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -11,23 +11,24 @@
   background-color: white;
   position: relative;
   border-radius: 15px;
-  width: 700px;
+  width: 600px;
   text-align: center;
-  padding: 20px 100px;
+  padding: 20px;
   box-sizing: border-box;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 :local(.worldcup) {
-  width: 60%;
-  height: 60%;
+  width: 50%;
+  height: 50%;
   margin-bottom: 35px;
 }
 
 :local(.counter) {
-  font-size: 3rem;
+  font-size: 3.6rem;
   color: #d11d12;
   font-family: SamimBold;
-  margin-bottom: -10px;
+  margin-bottom: -15px;
 }
 
 :local(.time) {
@@ -37,7 +38,7 @@
 }
 
 :local(.name) {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   border-top: 2px solid #f0f0f0;
   color: #d9d3ca;
 }
@@ -48,7 +49,7 @@
   justify-content: center;
 
   > * {
-    margin: 0 20px;
+    margin: 0 25px;
   }
 }
 
@@ -61,7 +62,7 @@
   display: inline-block;
   background-color: #f5f1ec;
   padding: 10px;
-  border: 3px solid #ece8df;
+  border: 4px solid #ece8df;
   border-radius: 10px;
   position: absolute;
   top: 100%;
