fix: prevent background repeating

--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -4,6 +4,7 @@
   align-items: center;
   height: 100vh;
   background-image: url('@@CDN@@/images/landbackground.png');
+  background-size: cover;
   overflow-y: auto;
 }
 
