--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -76,18 +76,27 @@
   }
 }
 
-@media (max-height: 850px) {
-  :local(.container) {
-    align-items: flex-start;
-    padding-top: 25px;
-    box-sizing: border-box;
-  }
-}
-
-@media (max-width: 650px) {
+@media (max-width: 680px) {
   :local(.container) {
     display: block;
-    padding-top: 0;
+
+    h2 {
+      font-size: 1.2rem;
+    }
+  }
+
+  :local(.worldcup) {
+    width: 25%;
+    height: 25%;
+  }
+
+  :local(.name) {
+    font-size: 0.7rem;
+  }
+
+  :local(.counter) {
+    font-size: 1.8rem;
+    margin-bottom: 0;
   }
 
   :local(.content) {
@@ -95,6 +104,7 @@
     border: 0;
     border-radius: 0;
     box-shadow: none;
+    margin: 15px;
   }
 
   :local(.info) {
@@ -105,12 +115,76 @@
     position: static;
     transform: translate(0%, 0%);
     margin-top: 10px;
+    border-width: 2px;
+    padding: 4px;
+
+    img {
+      width: 50%;
+      height: 50%;
+    }
+
+    h2 {
+      font-size: 0.8rem;
+    }
+  }
+
+  :local(.timeContainer) {
+    > * {
+      margin: 0 10px;
+    }
   }
 }
 
-@media (max-width: 420px) {
-  :local(.timeContainer) {
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 400px) {
+  :local(.container) {
+    h2 {
+      font-size: 1.0rem;
+    }
+  }
+
+  :local(.name) {
+    font-size: 0.6rem;
+  }
+
+  :local(.counter) {
+    font-size: 1.1rem;
+  }
+
+  :local(.qadam) {
+    img {
+      width: 50%;
+      height: 50%;
+    }
+
+    h2 {
+      font-size: 0.9rem;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  :local(.container) {
+    h2 {
+      font-size: 0.8rem;
+    }
+  }
+
+  :local(.name) {
+    font-size: 0.6rem;
+  }
+
+  :local(.counter) {
+    font-size: 1.1rem;
+  }
+
+  :local(.qadam) {
+    img {
+      width: 50%;
+      height: 50%;
+    }
+
+    h2 {
+      font-size: 0.7rem;
+    }
   }
 }
