--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -78,7 +78,7 @@
 
 @media (max-width: 680px) {
   :local(.container) {
-    display: block;
+    display: flex;
 
     h2 {
       font-size: 1.2rem;
@@ -100,11 +100,12 @@
   }
 
   :local(.content) {
-    width: auto;
+    width: 90%;
     border: 0;
     border-radius: 0;
     box-shadow: none;
     margin: 15px;
+    box-sizing: border-box;
   }
 
   :local(.info) {
