feat: put images inside of js

--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('@@CDN@@/images/landbackground.png');
+  background-image: url('~Root/static/images/landbackground.png');
   background-size: cover;
   overflow-y: auto;
 }
