feat: deploy new landing page

--- a/src/components/Landing/index.less
+++ b/src/components/Landing/index.less
@@ -20,9 +20,9 @@
 }
 
 :local(.worldcup) {
-  width: 50%;
-  height: 50%;
-  margin-bottom: 35px;
+  width: 40%;
+  height: 40%;
+  margin-bottom: 45px;
 }
 
 :local(.counter) {
@@ -55,8 +55,8 @@
 }
 
 :local(.info) {
-  color: #ccc4b8;
-  margin-bottom: 75px;
+  color: darken(#ccc4b8, 5%);
+  margin-bottom: 85px;
 }
 
 :local(.qadam) {
@@ -199,4 +199,10 @@
     font-size: 0.7rem;
     margin-bottom: 10px;
   }
+}
+
+:local(.coming) {
+  color: darken(#ccc4b8, 35%);
+  line-height: 170%;
+  margin-bottom: 25px;
 }
